<resources>
    <string name="app_name">AnkiReader</string>
    <string name="about">Hi~,这款小工具的使用场景:想循环播放牌组内的音频,
        平常刷微博/聊天也想随便听听复习下,顺便看看单词.这些是本人根据自己的需求写的一个小APP,
        界面有点简陋,目前还在持续开发中,
        建议欢迎反馈到酷安,如果你想支持我,可以请我吃个鸡腿(戳下面),赞赏无所谓,希望这个应用能帮到你,谢谢!</string>
    <string name="key_float_mode">key_float_mode</string>
    <string name="text_chose_float_mode">请选择笔记显示模式</string>
    <string name="text_float_mode_summary">播放时笔记内容将会显示在屏幕上,分为普通文本模式和弹幕模式</string>
    <string name="text_settings">设置</string>
    <string name="text_float_mode_common">普通模式</string>
    <string name="text_float_mode_null">我选择不显示</string>
    <string name="text_test">苟利国家生死以</string>
    <string name="confirm">确定</string>
    <string name="key_float_mode_common">key_float_mode_common</string>
    <string name="text_float_mode_common_summary">悬浮窗显示笔记内容</string>
    <string name="text_float_mode_common_settings">普通模式</string>
    <string name="key_common_textsize">key_common_textsize</string>
    <string name="text_common_textsize">文字大小</string>
    <string name="key_common_textcolor">key_commom_textcolor</string>
    <string name="text_common_textcolor">文本颜色</string>
    <string name="key_common_background">key_commom_background</string>
    <string name="text_common_background">背景颜色</string>
    <string name="text_gravity_center">居中</string>
    <string name="text_gravity_left">左对齐</string>
    <string name="text_gravity_right">右对齐</string>
    <string name="key_common_text_gravity">key_common_text_gravity</string>
    <string name="text_common_text_gravity">文本对齐方式</string>
    <string name="text_category_note_float_settings">悬浮窗设置</string>
    <string name="text_category_play_settings">播放设置</string>
    <string name="key_play_loop_count">key_play_loop_count</string>
    <string name="text_play_loop_count">播放循环次数</string>
    <string name="key_play_interval_time">key_play_interval_time</string>
    <string name="text_play_interval_time">播放间隔时间(毫秒)</string>
    <string name="key_play_reverse">key_play_reverse</string>
    <string name="text_play_reverse">播放倒序</string>
    <string name="key_play_switch">key_play_switch</string>
    <string name="text_play_switch">播放开关</string>
    <string name="text_play_switch_summary">播放音频开关,你可以选择只看弹幕</string>
    <string name="key_random_play">key_random_play</string>
    <string name="text_random_play">随机播放</string>
    <string name="text_category_notification">通知栏设置</string>
    <string name="key_notification_switch">key_notification_switch</string>
    <string name="text_notification_switch">通知栏开关</string>
    <string name="text_notification_switch_summary">是否显示通知栏</string>
    <string name="key_common_text_maxlength">key_common_text_maxlength</string>
    <string name="text_common_text_maxlength">笔记内容最大长度</string>
    <string name="key_play_deck_ids">key_play_deck_ids</string>
    <string name="key_common_click_stop">key_common_click_stop</string>
    <string name="text_common_click_stop">双击暂停播放</string>
    <string name="text_category_tts">TTS设置</string>
    <string name="key_tts_switch">key_tts_switch</string>
    <string name="text_tts_switch">TTS开关</string>
    <string name="text_tts_switch_summary">TTS需要相关引擎支持,需安装\"Google文字转语音引擎\"之类的TTS支持</string>
    <string name="key_tts_use_all">key_tts_use_all</string>
    <string name="text_tts_use_all">全局TTS</string>
    <string name="text_tts_use_all_summary">设置全局TTS会覆盖原有音频,若不设置该项,会优先使用原有音频,不存在再使用TTS</string>
    <string name="key_tts_front_switch">key_tts_front_switch</string>
    <string name="text_tts_front_switch">正面TTS</string>
    <string name="key_tts_back_switch">key_tts_back_switch</string>
    <string name="text_tts_back_switch">反面TTS</string>
    <string name="key_tts_download">key_tts_download</string>
    <string name="text_tts_download">TTS引擎下载</string>
    <string name="text_tts_download_summary">会跳转到应用市场搜索页面</string>
    <string name="select_deck_done_all">全选</string>
    <string name="msg_anki_not_install">没有找到 Anki 数据库,请确保安装 Anki 后使用.</string>
    <string name="msg_deck_empty">牌组为空...</string>
    <string name="text_about">关于</string>
    <string name="text_github">本项目开源:\nhttps://github.com/Blankeer/AnkiReader</string>
    <string name="card_back">card back</string>
    <string name="card_front">card front</string>
    <string name="deck_title">Deck Title</string>
</resources>
