<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/text_category_note_float_settings">

        <EditTextPreference
            android:defaultValue="14"
            android:inputType="number"
            android:key="@string/key_common_textsize"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/text_common_textsize" />


        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_common_click_stop"
            android:title="@string/text_common_click_stop" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/text_category_play_settings">

        <EditTextPreference
            android:defaultValue="800"
            android:inputType="number"
            android:key="@string/key_play_interval_time"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/text_play_interval_time" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/key_play_switch"
            android:key="@string/key_random_play"
            android:title="@string/text_random_play" />

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/text_category_notification">

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/key_notification_switch"
            android:summary="@string/text_notification_switch_summary"
            android:title="@string/text_notification_switch" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/text_category_tts">

        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/key_tts_switch"
            android:summary="@string/text_tts_switch_summary"
            android:title="@string/text_tts_switch" />


        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/key_tts_switch"
            android:key="@string/key_tts_use_all"
            android:summary="@string/text_tts_use_all_summary"
            android:title="@string/text_tts_use_all" />

        <SwitchPreference
            android:defaultValue="true"
            android:dependency="@string/key_tts_switch"
            android:key="@string/key_tts_front_switch"
            android:title="@string/text_tts_front_switch" />

        <SwitchPreference
            android:defaultValue="false"
            android:dependency="@string/key_tts_switch"
            android:key="@string/key_tts_back_switch"
            android:title="@string/text_tts_back_switch" />
    </PreferenceCategory>
</PreferenceScreen>
